# glashaus

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  GLASHAUS_PLAN.md  LICENSE  README.md  ROADMAP.md  install.sh  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: SETUP_BACKUPS.md  SETUP_BRANCH_PROTECTION.md  SETUP_HOOKS.md  SETUP_MIRROR.md  SETUP_SIGNING.md  architecture.md  commands.md  customization.md  ethics.md  fine-tune.md  moving.md  telegram.md
scripts/: com.glashaus.backup.plist  pre_migration_snapshot.sh  snapshot_state_db.sh
src/: audition.js  backup.js  chat.js  cli.js  config.js  consolidate.js  corpus.js  db.js  doctor.js  dream.js  embeddings.js  health.js  heartbeat.js  index.js  lexicon.js  llm.js  memory.js  persona.js  prompt.js  register.js  selfstate.js  setup-apply.js  setup.js  soul.js  telegram.js  tty.js  viewer-standalone.js  viewer.js
src/glashaus/: __init__.py  cli.py  logging.py
src/glashaus/cli/: __init__.py  chat_cmd.py  config.py  format.py  inspect_cmd.py  main.py  wizard.py
src/glashaus/memory/: __init__.py  store.py  types.py
src/glashaus/providers/: __init__.py  base.py  ollama_chat.py  openai_embed.py
src/glashaus/retrieval/: __init__.py  retriever.py  scoring.py  types.py
src/glashaus/self_state/: __init__.py  consistency.py  dynamics.py  store.py  types.py
src/glashaus/storage/: __init__.py  _gen_snapshot.py  db.py  runner.py  tx.py
src/glashaus/storage/migrations/: 001_initial.sql  002_self_state_events.sql
src/glashaus/turn/: __init__.py  apply.py  assemble.py  loop.py  parse.py  tools.py
test/: purge.test.js  register.test.js  smoke.js
tests/: test_cli.py  test_memory.py  test_providers.py  test_retrieval.py  test_schema_snapshot.py  test_self_state.py  test_smoke.py  test_storage.py  test_turn.py
tests/fixtures/: schema_snapshot.sql
