[project]
name = "glashaus"
version = "0.0.0"
description = "A long-running personal AI companion. Not an assistant. Something that remembers, reflects, and grows alongside you."
readme = "README.md"
requires-python = "==3.12.*"
authors = [{ name = "Austin" }]
license = { text = "UNLICENSED" }

# Phase 0 ships with zero runtime dependencies. We add deps as the phases
# that need them land. Anything here is something Phase 0 actually uses.
dependencies = [
    "structlog>=24.4",
]

[project.scripts]
glashaus = "glashaus.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "mypy>=1.13",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glashaus"]

# --- ruff -----------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# Conservative starting set. Expand as the codebase grows.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # allow asserts that mypy might flag

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- mypy -----------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_return_any = true
files = ["src", "tests"]

# --- pytest ---------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: tests that are skipped on the fast pre-commit run",
    "schema_snapshot: schema/migration snapshot tests (filled in Phase 1)",
]

# --- coverage -------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["src/glashaus"]

[tool.coverage.report]
show_missing = true
skip_covered = false
